--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <header>
             <div class="container container-flex">
                 <div class="site-title">
-                    <h1>Living the social life</h1>
-                    <p class="subtitle">A blog exploring minimalism in life</p>
+                    <h1>Living Your best life </h1>
+                    <p class="subtitle">A blog exploring happiness & or minimalism in life</p>
                 </div>
                 <nav>
                     <ul>
@@ -24,7 +24,7 @@
             <main role="main">
                 
                 <article class="article-featured">
-                    <h2 class="article-title">Finding simplicity in life</h2>
+                    <h2 class="article-title">Finding the simple things in life</h2>
                     <img src="img/life.jpg" alt="simple white desk on a white wall with a plant on the far right side" class="article-image">
                     <p class="article-info">July 23, 2019 | 3 comments</p>
                     <p class="article-body"><strong>Life can get complicated really quickly</strong>, but it doesn't have to be! There are many ways to simplify your life, <a href="#">a few of which we've explored in the past</a>. This week we're taking a bit of a approach though, in how you can find simplicity in the life you already living.</p>
