--- a/Simplicity.html
+++ b/Simplicity.html
@@ -1,2 +1,9 @@
-Helllo thats crazy stuff over there haha.
-Have you tried smoking potatoes
+---
+layout: default
+title: My New Page
+---
+<h1>Welcome to the New Page</h1>
+
+
+<p>Helllo thats crazy stuff over there haha.
+Have you tried smoking potatoes.Its because potatoes rock like no knes business from afto euinfo china and asia.Pardon me but these words aren't supposed to make sense</p>
