--- a/recent-posts.html
+++ b/recent-posts.html
@@ -26,8 +26,15 @@
                 <article class="article-recent">
                     <div class="article-recent-main">
                         <h2 class="article-title">Finding simplicity in life</h2>
-                        <p class="article-body"><strong>Life can get complicated really quickly</strong>, but it doesn't have to be! There are many ways to simplify your life, <a href="#">a few of which we've explored in the past</a>. This week we're taking a bit of a approach though, in how you can find simplicity in the life you already living.</p>
+
+<p class="article-body"><strong>Life can get complicated really quickly</strong>, but it doesn't have to be! There are many ways to simplify your life, <a href="#">a few of which we've explored in the past</a>. This week we're taking a bit of a approach though, in how you can find simplicity in the life you already living.</p>
+                        
                         <a href="#" class="article-read-more">CONTINUE READING</a>
+
+                        <a href="https://forkingengineer.github.io/simplicity.html" class="button">Learn More</a>
+
+
+                        
                     </div>
                     <div class="article-recent-secondary">
                         <img src="img/life.jpg" alt="simple white desk on a white wall with a plant on the far right side" class="article-image">
